--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "antd": "^5.8.4",
     "axios": "^1.4.0",
     "bootstrap": "^4.3.1",
+    "formik": "^2.4.3",
     "jquery": "^3.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-player": "^2.12.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
     "thunk": "^0.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
